@@ -6,6 +6,10 @@
 
 	* Makefile.in.in: Upgrade to gettext-0.10.38.
 
+2002-05-17  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.38.
+
 2002-05-10  gettextize  <bug-gnu-utils@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.10.38.
